Subindo alteracoes
